--- a/fix-template.yaml
+++ b/fix-template.yaml
@@ -21,7 +21,7 @@ Parameters:
 
   AMIId:
     Type: AWS::EC2::Image::Id
-    Default: ami-0c94855ba95c71c99   # Corrected Amazon Linux 2 AMI in us-east-1
+    Default: ami-0199d4b5b8b4fde0e  
     Description: The AMI ID to use.
 
   VpcId:
@@ -50,8 +50,8 @@ Resources:
       InstanceType: !Ref InstanceType
       ImageId: !Ref AMIId
       SecurityGroupIds:
-        - !Ref InstanceSecurityGroup   # Attach the security group
-      KeyName: !Ref KeyName           # Optional: attach KeyName for SSH
+        - !Ref InstanceSecurityGroup   
+      KeyName: !Ref KeyName          
       Tags:
         - Key: Name
           Value: !Sub "${EnvironmentName}-instance"
